--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@angular/platform-browser": "8.1.0",
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/router": "8.1.0",
-    "@clr/angular": "1.0.0",
-    "@clr/icons": "1.0.0",
-    "@clr/ui": "1.0.0",
-    "@ng-holistic/clr-common": "0.0.61",
-    "@ng-holistic/clr-controls": "0.0.61",
-    "@ng-holistic/clr-forms": "0.0.61",
-    "@ng-holistic/clr-list": "^0.0.71",
-    "@ng-holistic/forms": "0.0.61",
+    "@clr/angular": "1.1.3",
+    "@clr/icons": "1.1.3",
+    "@clr/ui": "1.1.3",
+    "@ng-holistic/clr-common": "^0.0.74",
+    "@ng-holistic/clr-controls": "^0.0.74",
+    "@ng-holistic/clr-forms": "^0.0.74",
+    "@ng-holistic/clr-list": "^0.0.74",
+    "@ng-holistic/forms": "^0.0.74",
     "@ng-holistic/typeahead": "^0.0.56",
     "@webcomponents/custom-elements": "1.2.4",
     "angular2-hotkeys": "^2.1.4",
@@ -27,6 +27,7 @@
     "date-fns": "2.0.0-beta.2",
     "property-watch-decorator": "^1.2.5",
     "ramda": "0.26.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "6.5.2",
     "typescript-memoize": "1.0.0-alpha.3",
     "zone.js": "0.9.1"
